--- a/lecture/index.html
+++ b/lecture/index.html
@@ -89,7 +89,8 @@
                 <div><h1 id="readings-and-lectures-notes">Readings and Lectures Notes</h1>
 <h2 id="week1-reading">Week1 Reading</h2>
 <p>Introduction to Computing (By Calvin U.) <a class="a-val" href="https://cs.calvin.edu/activities/books/processing/text/01computing.pdf" target="_blank" aliceblue> PDF</a> </p>
-<p>Information and Entropy by Craig S. Lent, Section 1.1 to section 3.5 <a class="a-val" href="https://cs.calvin.edu/activities/books/processing/text/01computing.pdf" target="_blank" aliceblue> PDF</a> </p></div>
+<p>Information and Entropy by Craig S. Lent, Section 1.1 to section 3.5 <a class="a-val" href="https://cs.calvin.edu/activities/books/processing/text/01computing.pdf" target="_blank" aliceblue> PDF</a> </p>
+<p><embed alt="Alt text" src="../data/lecture/Intro.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
           </div><footer>
