--- a/problemset/index.html
+++ b/problemset/index.html
@@ -88,7 +88,9 @@
               
                 <div><h1 id="problem-set">Problem set</h1>
 <h2 id="problem-set-1-due-jan-21-1159pm">Problem set 1, Due Jan 21, 11:59PM</h2>
-<p>Problem 1, part B:  <a class="a-val" href="/data/problem_set/P1_B.tar.gz" target="_blank" aliceblue> P1_B.tar.gz</a> </p>
+<!-- Problem 1, part B:  <a class="a-val" href="/data/problem_set/P1_B.tar.gz" target="_blank",style="color: aliceblue"> P1_B.tar.gz</a>  -->
+
+<p><a download="P1_B.tar.gz" href="../data/problem_set/P1_B.tar.gz">P1_B.tar.gz</a></p>
 <p><embed alt="Alt text" src="../data/problem_set/p1.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
