--- a/section2/index.html
+++ b/section2/index.html
@@ -96,6 +96,7 @@
               
                 <div><h1 id="section-worksheets">Section Worksheets</h1>
 <h2 id="week2-worksheet-due-jan-28-1159pm">Week2 worksheet. Due Jan 28, 11:59PM</h2>
+<p><a download="mesh.dat" href="../data/sections/mesh.dat">mesh.dat</a></p>
 <p><embed alt="Alt text" src="../data/sections/Section_worksheet_Week2.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
