--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -105,6 +105,7 @@
 <p>First and Second Fundamental Forms and Gaussian map by Faraad Armwood.<a class="a-val" href="https://www.ndsu.edu/pubweb/~armwood/DiffGeo.pdf" target="_blank"> PDF</a> </p>
 <p>FUNDAMENTAL FORMS OF SURFACES AND THE GAUSS-BONNET THEOREM by HUNTER S. CHASE.<a class="a-val" href="https://math.uchicago.edu/~may/REU2012/REUPapers/Chase.pdf" target="_blank"> PDF</a> </p>
 <h2 id="lecture-notes-tensor-algebra-2">Lecture Notes: Tensor Algebra 2</h2>
+<p><embed alt="Alt text" src="../data/lecture/Mesh_generation.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p>
 <p><embed alt="Alt text" src="../data/lecture/tensors2.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
