--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                 <div><h1 id="phys-129al-introduction-to-computational-physics">Phys-129AL Introduction to Computational Physics</h1>
 <p>Instructor: Zihang Wang, zihangwang[AT]ucsb.edu, </p>
 <p>Lecture: TR2:00 PM-3:15 PM, Location, SSMS, 1303</p>
-<p>Office hours, TBA</p>
+<p>Office hours, T,W,R 12:30 PM-1:30 PM, Borida 6304</p>
 <p>TA: Dawson Lyles, dawsonlyles[AT]ucsb.edu,</p>
 <p>Sections: 
 M,W, 3:30 PM-4:45 PM \ 
 T, R, 3:30 PM-4:45 PM, Location, SSMS, 1304</p>
-<p>Office hours, TBA</p>
+<p>Office hours, M,F 2:00 PM-3:00 PM, BioEngineering building lounge</p>
 <h2 id="important-sites">Important Sites</h2>
 <p><a href="https://ucsb.instructure.com/courses/24939">Canvas</a></p>
 <p><a href="https://github.com/">Github</a></p>
@@ -213,5 +213,5 @@ python3 &lt;...&gt;  # Run a python program.
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-16 20:03:08.131522+00:00
+Build Date UTC : 2025-01-16 20:45:15.781586+00:00
 -->
