--- a/lecture2/index.html
+++ b/lecture2/index.html
@@ -110,6 +110,7 @@
 <p>Variational Tetrahedral Meshing again by Jonathan Shewchuk. This uses the idea in energy minimization.<a class="a-val" href="https://people.eecs.berkeley.edu/~jrs/meshpapers/ACSYD.pdf" target="_blank"> PDF</a> </p>
 <p>First and Second Fundamental Forms and Gaussian map by Faraad Armwood.<a class="a-val" href="https://www.ndsu.edu/pubweb/~armwood/DiffGeo.pdf" target="_blank"> PDF</a> </p>
 <p>FUNDAMENTAL FORMS OF SURFACES AND THE GAUSS-BONNET THEOREM by HUNTER S. CHASE.<a class="a-val" href="https://math.uchicago.edu/~may/REU2012/REUPapers/Chase.pdf" target="_blank"> PDF</a> </p>
+<p>Estimating Curvatures and Their Derivatives on Triangle Meshes by Szymon Rusinkiewicz <a class="a-val" href="https://gfx.cs.princeton.edu/pubs/Rusinkiewicz_2004_ECA/curvpaper.pdf" target="_blank"> PDF</a> </p>
 <h2 id="lecture-notes-mesh-generation-and-triangulation">Lecture Notes: Mesh Generation and Triangulation</h2>
 <p><embed alt="Alt text" src="../data/lecture/Mesh_generation2.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p>
 <p><embed alt="Alt text" src="../data/lecture/Mesh_generation.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p>
