--- a/lecture3/index.html
+++ b/lecture3/index.html
@@ -105,6 +105,7 @@
             <div class="section" itemprop="articleBody">
               
                 <div><h2 id="lecture-notes-turing-machines">Lecture Notes: Turing Machines</h2>
+<p>Turing's origional paper on Turing Machines<a class="a-val" href="https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf" target="_blank"> PDF </a> </p>
 <p><embed alt="Alt text" src="../data/lecture/Turingmachines.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
