--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@ T, R, 3:30 PM-4:45 PM, Location, SSMS, 1304</p>
 <em><br>
 </em> <code>docker pull zhwangs/comp_phys:tag</code> - Pull the image with tag (ver1)
 <em><br>
+</em> <code>docker pull --platform linux/arm64 zhwangs/comp_phys:tag</code>   -  Pull the image with arm64 platform (e.g. Mac) with tag (ver1)
+<em><br>
+</em>  <code>docker run --platform linux/arm64 -it zhwangs/comp_phys:tag</code> - Run a container with arm64 platform (e.g. Mac) with tag (ver1)
+<em><br>
 </em> <code>http://localhost:xx80/</code> - Access the UI interface via TCP. </p>
 <h2 id="readings">Readings</h2>
 <ul>
@@ -221,5 +225,5 @@ python3 &lt;...&gt;  # Run a python program.
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-22 20:57:31.844340+00:00
+Build Date UTC : 2025-01-22 22:05:46.222490+00:00
 -->
