--- a/lecture3/index.html
+++ b/lecture3/index.html
@@ -110,8 +110,10 @@
               
                 <div><h1 id="readings-and-lectures-notes">Readings and Lectures Notes</h1>
 <h2 id="week3-reading">Week3 Reading</h2>
-<h2 id="lecture-notes-turing-machines">Lecture Notes: Turing Machines</h2>
 <p>Turing's origional paper on Turing Machines<a class="a-val" href="https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf" target="_blank"> PDF </a> </p>
+<p>Quantum Computational Complexity by John Watrous (University of Waterloo)<a class="a-val" href="https://cs.uwaterloo.ca/~watrous/Papers/QuantumComputationalComplexity.pdf" target="_blank"> PDF </a> </p>
+<h2 id="lecture-notes-turing-machines">Lecture Notes: Turing Machines</h2>
+<p><embed alt="Alt text" src="../data/lecture/Computational_Complexity.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p>
 <p><embed alt="Alt text" src="../data/lecture/Turingmachines.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
