--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ T, R, 3:30 PM-4:45 PM, Location, SSMS, 1304</p>
 <p><a href="https://ucsb.instructure.com/courses/24939">Canvas</a></p>
 <p><a href="https://github.com/">Github</a></p>
 <p><a href="https://hub.docker.com/">Docker</a></p>
+<p><a href="https://www.deepseek.com/">Deepseek</a></p>
 <p><a href="http://localhost:8080/">http://localhost:8080/</a></p>
 <h2 id="docker-platform-requirements">Docker Platform Requirements</h2>
 <p>To get started, please visit <a href="https://hub.docker.com/">Docker Hub</a>
@@ -225,5 +226,5 @@ python3 &lt;...&gt;  # Run a python program.
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-24 19:10:21.726406+00:00
+Build Date UTC : 2025-01-24 21:25:23.752511+00:00
 -->
