--- a/lecture4/index.html
+++ b/lecture4/index.html
@@ -118,6 +118,7 @@
               
                 <div><h1 id="readings-and-lectures-notes">Readings and Lectures Notes</h1>
 <h2 id="week4-reading">Week4 Reading</h2>
+<p>Lecture notes on Recurrences by Jessica Su (Stanford). You can get more Examples on Master Theorem. <a class="a-val" href="https://web.stanford.edu/class/archive/cs/cs161/cs161.1168/lecture3.pdf" target="_blank"> PDF </a> </p>
 <p>Convex Optimization by Stephen Boyd and Lieven Vandenberghes, Chapter 6. It is fairly technical, but it is informative. You can skip those formal definitions. <a class="a-val" href="https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook.pdf" target="_blank"> PDF </a> </p>
 <p>Singular Value Decomposition and Principal Component Analysis, by Michael E. Wall1, Andreas Rechtsteiner, Luis M. Roc. Look at the graphical depiction in Fig.5.1 <a class="a-val" href="https://www.cs.cmu.edu/~tom/10701_sp11/slides/pca_wall.pdf" target="_blank"> PDF </a> </p>
 <p>Direct Methods for Sparse Linear Systems by Timothy A. Davis. If you know MATLAB, you can look at it. <a class="a-val" href="https://eclass.uth.gr/modules/document/file.php/E-CE_U_104/Timothy%20A.%20Davis%20Direct%20methods%20for%20sparse%20linear%20systems.pdf" target="_blank"> PDF </a> </p>
