--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <div><h1 id="phys-129al-introduction-to-computational-physics">Phys-129AL Introduction to Computational Physics</h1>
+                <div><h1 id="phys-129l-introduction-to-computational-physics">Phys-129L Introduction to Computational Physics</h1>
 <p>Instructor: Zihang Wang, zihangwang[AT]ucsb.edu, </p>
 <p>Lecture: TR2:00 PM-3:15 PM, Location, SSMS, 1303</p>
 <p>Office hours, T,W,R 12:30 PM-1:30 PM, Borida 6304</p>
@@ -242,5 +242,5 @@ python3 &lt;...&gt;  # Run a python program.
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-02-04 23:52:31.855999+00:00
+Build Date UTC : 2025-02-05 18:14:49.023115+00:00
 -->
