--- a/lecture5/index.html
+++ b/lecture5/index.html
@@ -139,8 +139,7 @@
 
 <h2 id="a-system-with-dissipation-lorenz-system-butterfly-like-attractors">A System with Dissipation: Lorenz System Butterfly-like Attractors:</h2>
 <video width="640" height="360" controls>
-  <source src="/data/lecture/lorenz_system_animation.mp4" type="video/mp4">
-  Your browser does not support the video tag.
+  <source src="./data/lecture/lorenz_system_animation.mp4" type="video/mp4">
 </source></video>
 
 <h2 id="lecture-notes-probability-legendre-transforms-partition-function-density-of-states-lagrangian-hamiltonian-poisson-bracket-classical-phase-space-trajectory-liouville-equation">Lecture Notes: Probability, Legendre Transforms, Partition Function, Density of States, Lagrangian, Hamiltonian, Poisson Bracket, Classical Phase Space Trajectory, Liouville Equation</h2>
