--- a/section7A/index.html
+++ b/section7A/index.html
@@ -163,7 +163,7 @@
 <p>Task 2 data sets 
 <a download="Cavity_decay_dataset.json" href="../data/sections/Cavity_decay_dataset.json">Cavity_decay_dataset.json</a>
 <a download="Vacuum_decay_dataset.json" href="../data/sections/Vacuum_decay_dataset.json">Vacuum_decay_dataset.json</a></p>
-<p><embed alt="Alt text" src="./data/sections/Section_worksheet_Week7A.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
+<p><embed alt="Alt text" src="../data/sections/Section_worksheet_Week7A.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
           </div><footer>
