--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
 M,W, 3:30 PM-4:45 PM \ 
 T, R, 3:30 PM-4:45 PM, Location, SSMS, 1304</p>
 <p>Office hours, M,F 2:00 PM-3:00 PM, BioEngineering building lounge</p>
+<p>-----Final Exam-----</p>
+<p>Location: Web 1100
+Time: Tuesday, March 18, 2025 4:00 PM - 7:00 PM</p>
+<p>This is a pen-and-paper exam. Please bring a blue book. The TA and I will distribute the exam at 3:50 PM and begin at 4:00 PM, so please arrive early. You are allowed to bring a single handwritten note sheet, which the TA and I will check before the exam. I will release a practice exam on March 10, 2025, and its solution on March 14, 2025.</p>
+<hr>
 <h2 id="important-sites">Important Sites</h2>
 <p><a href="https://ucsb.instructure.com/courses/24939">Canvas</a></p>
 <p><a href="https://github.com/">Github</a></p>
@@ -310,5 +315,5 @@ python3 &lt;...&gt;  # Run a python program.
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-03-06 21:48:00.467576+00:00
+Build Date UTC : 2025-03-07 20:13:37.331098+00:00
 -->
