--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ T, R, 3:30 PM-4:45 PM, Location, SSMS, 1304</p>
 <p>-----Final Exam-----</p>
 <p>Location: Web 1100
 Time: Tuesday, March 18, 2025 4:00 PM - 7:00 PM</p>
-<p>This is a pen-and-paper exam. Please bring a blue book. The TA and I will distribute the exam at 3:50 PM and begin at 4:00 PM, so please arrive early. You are allowed to bring a single handwritten note sheet, which the TA and I will check before the exam. I will release a practice exam on March 10, 2025, and its solution on March 14, 2025.</p>
+<p>This is a pen-and-paper exam. Please bring a blue book. The TA and I will distribute the exam at 3:50 PM and begin at 4:00 PM, so please arrive early. You are allowed to bring a single handwritten note sheet, which the TA and I will check before the exam. I have released the practice exam, and its solution will be out on March 14, 2025.</p>
 <p><a href="Practice_final/">Practice Final</a></p>
 <hr>
 <h2 id="important-sites">Important Sites</h2>
@@ -320,5 +320,5 @@ python3 &lt;...&gt;  # Run a python program.
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-03-08 01:11:17.714876+00:00
+Build Date UTC : 2025-03-08 01:20:59.777124+00:00
 -->
