--- a/section10/index.html
+++ b/section10/index.html
@@ -209,7 +209,7 @@
                 <div><h1 id="section-worksheets">Section Worksheets</h1>
 <h2 id="week10-worksheet-due-mar-18-1159pm">Week10 worksheet. Due Mar 18, 11:59PM</h2>
 <p><a download="qe_file.zip" href="../data/sections/qe_file.zip">qe_file.zip</a></p>
-<p><embed alt="Alt text" src="./data/sections/Section_worksheet_Week10.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
+<p><embed alt="Alt text" src="../data/sections/Section_worksheet_Week10.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
           </div><footer>
