--- a/Practice_final/index.html
+++ b/Practice_final/index.html
@@ -214,8 +214,9 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <div><h1 id="practice-final-exam">Practice Final Exam</h1>
+                <div><h1 id="practice-final-exam-and-solution">Practice Final Exam (and Solution)</h1>
 <h2 id="total-time-3-hours">Total Time: 3 hours</h2>
+<p><embed alt="Alt text" src="../data/problem_set/Practice_Final_Exam_Solution.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p>
 <p><embed alt="Alt text" src="../data/problem_set/Practice_Final_Exam.pdf" style="min-height:100vh;width:100%" type="application/pdf"></embed></p></div>
               
             </div>
